--- a/templates/index.html
+++ b/templates/index.html
@@ -61,4 +61,10 @@
             
         </div>
     </div>
+
+
+    <div class="px-5 py-5 mx-auto">
+        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
+        <p class="text-secondary">Put your name here</p>
+    </div>
 {% endblock %}
